EE-1587: Production Foresee Modal Dialog * Removes role="dialog" display none rule that caused issues with unexpected dialogs * Adds hidden-at-start CSS style with visibility: hidden * Adds hidden-at-start CSS class to dialog-all-locations's fieldset to avoid radio buttons showing before dialog instantiated * Removes CSS class once dialog created

--- a/drupal/sites/all/themes/eenterprise/sass/styles.scss
+++ b/drupal/sites/all/themes/eenterprise/sass/styles.scss
@@ -944,9 +944,8 @@ header {
 // Hide dialogs on first load -------------- //
 
 .page-workbench {
-    .ui-dialog,
-    div[role="dialog"]:not(.fsrFloatingContainer) {
-        display: none;
+    .hidden-at-start {
+        visibility: hidden;
     }
     .locations-modal.ui-dialog {
         max-width: 80%;
